--- a/package.json
+++ b/package.json
@@ -70,9 +70,11 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "es6-symbol": "^3.1.0",
     "json2mq": "^0.2.0",
     "object-assign": "^4.1.0",
     "react-responsive-mixin": "^0.3.5",
+    "reflect.ownkeys": "^0.2.0",
     "slick-carousel": "^1.6.0"
   },
   "peerDependencies": {
