--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,9 @@
     "react",
     "es2015-loose"
   ],
-  "plugins": ["transform-object-assign", "transform-class-properties"]
+  "plugins": [
+    "transform-object-assign",
+    "transform-decorators-legacy",
+    "transform-class-properties"
+  ]
 }
